# fa_sa_mini_applications

./: README.md  gen_requirements.sh  pyproject.toml  pytest.ini  requirements.txt
requirements/: dev_requirements.txt  develop_requirements.txt  prod_requirements.txt  test_requirements.txt  testing_requirements.txt
src/banking_app/: .env.example  .env.test  README.md  alembic.ini  conf.py  connection.py  main.py
src/banking_app/#db_description/: banking_database_shema.drawio
src/banking_app/#db_json_data/: balances.json  clients.json  status.json
src/banking_app/#db_raw_queries/: queries.sql
src/banking_app/managers/: balance.py  base.py  client.py  status.py
src/banking_app/migrations/: env.py
src/banking_app/migrations/versions/: 2023-12-02_08:47_485c0e5953a7_initial_migration.py  7da164889db9_created_client_and_status_desc_tables.py
src/banking_app/models/: balance.py  base.py  card.py  client.py  status.py  transaction.py
src/banking_app/routers/: balance.py  card.py  client.py  status.py  transaction.py
src/banking_app/schemas/: __init__.py  balance.py  base.py  card.py  client.py  status.py  transaction.py
src/banking_app/tests/: README.md  __init__.py  conftest.py  helpers.py
src/banking_app/tests/general/: endpoints.py  managers.py
src/banking_app/tests/test_client/: conftest.py  factory.py  helpers.py  test_endpoints.py  test_managers.py  test_schemas.py
src/banking_app/tests/test_status/: TODO.md  __init__.py  conftest.py  (+5 more)
src/banking_app/types/: card.py  client.py  general.py
src/banking_app/utils/: exceptions.py  kwargs_parser.py
